go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@hugo_5.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkSortMap",
      "uri": "tpl/collections/sort_test.go::BenchmarkSortMap",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkWhereMap",
      "uri": "tpl/collections/where_test.go::BenchmarkWhereMap",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkWhereOps::eq",
      "uri": "tpl/collections/where_test.go::BenchmarkWhereOps::eq",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkWhereOps::like",
      "uri": "tpl/collections/where_test.go::BenchmarkWhereOps::like",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkWhereOps::ne",
      "uri": "tpl/collections/where_test.go::BenchmarkWhereOps::ne",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
