go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@hugo_6.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkTruncate::Plain_text",
      "uri": "tpl/strings/truncate_test.go::BenchmarkTruncate::Plain_text",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkTruncate::With_link",
      "uri": "tpl/strings/truncate_test.go::BenchmarkTruncate::With_link",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
