go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@opentelemetry-go_0.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkAsFloat64Slice",
      "uri": "attribute/internal/attribute_test.go::BenchmarkAsFloat64Slice",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkBoolSliceValue",
      "uri": "attribute/internal/attribute_test.go::BenchmarkBoolSliceValue",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkFloat64SliceValue",
      "uri": "attribute/internal/attribute_test.go::BenchmarkFloat64SliceValue",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkInt64SliceValue",
      "uri": "attribute/internal/attribute_test.go::BenchmarkInt64SliceValue",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkStringSliceValue",
      "uri": "attribute/internal/attribute_test.go::BenchmarkStringSliceValue",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
