go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zap.snap
---
source: go-runner/src/integration_tests.rs
expression: results
---
[
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkBufferedWriteSyncer::write_file_with_buffer",
        "uri": "zapcore/buffered_write_syncer_bench_test.go::BenchmarkBufferedWriteSyncer::write_file_with_buffer",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkMultiWriteSyncer::2_discarder",
        "uri": "zapcore/write_syncer_bench_test.go::BenchmarkMultiWriteSyncer::2_discarder",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkMultiWriteSyncer::4_discarder",
        "uri": "zapcore/write_syncer_bench_test.go::BenchmarkMultiWriteSyncer::4_discarder",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkMultiWriteSyncer::4_discarder_with_buffer",
        "uri": "zapcore/write_syncer_bench_test.go::BenchmarkMultiWriteSyncer::4_discarder_with_buffer",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkWriteSyncer::write_file_with_no_buffer",
        "uri": "zapcore/write_syncer_bench_test.go::BenchmarkWriteSyncer::write_file_with_no_buffer",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  },
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkBuffers::ByteSlice",
        "uri": "buffer/buffer_test.go::BenchmarkBuffers::ByteSlice",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkBuffers::BytesBuffer",
        "uri": "buffer/buffer_test.go::BenchmarkBuffers::BytesBuffer",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkBuffers::CustomBuffer",
        "uri": "buffer/buffer_test.go::BenchmarkBuffers::CustomBuffer",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  },
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkTake",
        "uri": "internal/stacktrace/stack_test.go::BenchmarkTake",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  },
  {
    "creator": {
      "name": "codspeed-go",
      "version": "[version]",
      "pid": "[pid]"
    },
    "instrument": {
      "type": "walltime"
    },
    "benchmarks": [
      {
        "name": "BenchmarkWriter::single",
        "uri": "zapio/writer_test.go::BenchmarkWriter::single",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      },
      {
        "name": "BenchmarkWriter::splits",
        "uri": "zapio/writer_test.go::BenchmarkWriter::splits",
        "config": {
          "warmup_time_ns": null,
          "min_round_time_ns": null,
          "max_time_ns": null,
          "max_rounds": null
        },
        "stats": "[stats]"
      }
    ]
  }
]
