go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zap_0.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "Benchmark100Fields",
      "uri": "logger_bench_test.go::Benchmark100Fields",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAddCallerAndStacktrace",
      "uri": "logger_bench_test.go::BenchmarkAddCallerAndStacktrace",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAddCallerHook",
      "uri": "logger_bench_test.go::BenchmarkAddCallerHook",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::field-only::any",
      "uri": "unknown::BenchmarkAny::string::field-only::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::field-only::typed",
      "uri": "unknown::BenchmarkAny::string::field-only::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::log-go::any",
      "uri": "unknown::BenchmarkAny::string::log-go::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::log-go::typed",
      "uri": "unknown::BenchmarkAny::string::log-go::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::log::any",
      "uri": "unknown::BenchmarkAny::string::log::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::string::log::typed",
      "uri": "unknown::BenchmarkAny::string::log::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::field-only::any",
      "uri": "unknown::BenchmarkAny::stringer::field-only::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::field-only::typed",
      "uri": "unknown::BenchmarkAny::stringer::field-only::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::log-go::any",
      "uri": "unknown::BenchmarkAny::stringer::log-go::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::log-go::typed",
      "uri": "unknown::BenchmarkAny::stringer::log-go::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::log::any",
      "uri": "unknown::BenchmarkAny::stringer::log::any",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAny::stringer::log::typed",
      "uri": "unknown::BenchmarkAny::stringer::log::typed",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
