go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zap_1.snap
---
source: src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkBufferedWriteSyncer::write_file_with_buffer",
      "uri": "unknown::BenchmarkBufferedWriteSyncer::write_file_with_buffer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMultiWriteSyncer::2_discarder",
      "uri": "unknown::BenchmarkMultiWriteSyncer::2_discarder",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMultiWriteSyncer::4_discarder",
      "uri": "unknown::BenchmarkMultiWriteSyncer::4_discarder",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkMultiWriteSyncer::4_discarder_with_buffer",
      "uri": "unknown::BenchmarkMultiWriteSyncer::4_discarder_with_buffer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkWriteSyncer::write_file_with_no_buffer",
      "uri": "unknown::BenchmarkWriteSyncer::write_file_with_no_buffer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
