go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zerolog_1.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "[version]",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkAppendFloat::Float32",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendFloat::Float32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendFloat::Float64",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendFloat::Float64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int-Negative",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int-Negative",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int-Positive",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int-Positive",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int16",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int16",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int32",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int64",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::int8",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::int8",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::uint16",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::uint16",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::uint32",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::uint32",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::uint64",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::uint64",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendInt::uint8",
      "uri": "internal/cbor/types_test.go::BenchmarkAppendInt::uint8",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingFirst",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::EncodingFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingLast",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::EncodingLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::EncodingMiddle",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::EncodingMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesFirst",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::MultiBytesFirst",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesLast",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::MultiBytesLast",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::MultiBytesMiddle",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::MultiBytesMiddle",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendString::NoEncoding",
      "uri": "internal/cbor/string_test.go::BenchmarkAppendString::NoEncoding",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendTime::Float",
      "uri": "internal/cbor/time_test.go::BenchmarkAppendTime::Float",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkAppendTime::Integer",
      "uri": "internal/cbor/time_test.go::BenchmarkAppendTime::Integer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
